@@ -22,7 +22,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 //Module includes
 include "./modules/" . $_SESSION[$guid]["module"] . "/moduleFunctions.php" ;
 
-if (isActionAccessible($guid, $connection2, "/modules/Formal Assessment/internalAssessment_view.php")==FALSE) {
+if (isActionAccessible($guid, $connection2, "/modules/Formal Assessment/externalAssessment_view.php")==FALSE) {
 	//Acess denied
 	print "<div class='error'>" ;
 		print __($guid, "Your request failed because you do not have access to this action.") ;
@@ -37,91 +37,9 @@ else {
 		print "</div>" ;
 	}
 	else {
-		if ($highestAction=="View Internal Assessments_all") { //ALL STUDENTS
+		if ($highestAction=="View External Assessments_myChildrens") { //MY CHILDREN
 			print "<div class='trail'>" ;
-			print "<div class='trailHead'><a href='" . $_SESSION[$guid]["absoluteURL"] . "'>" . __($guid, "Home") . "</a> > <a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/" . getModuleName($_GET["q"]) . "/" . getModuleEntry($_GET["q"], $connection2, $guid) . "'>" . __($guid, getModuleName($_GET["q"])) . "</a> > </div><div class='trailEnd'>" .__($guid, 'View All Internal Assessments') . "</div>" ;
-			print "</div>" ;
-			
-			$gibbonPersonID=NULL ;
-			if (isset($_GET["gibbonPersonID"])) {
-				$gibbonPersonID=$_GET["gibbonPersonID"] ;
-			}	
-	
-			print "<h3>" ;
-				print __($guid, "Choose A Student") ;
-			print "</h3>" ;
-			print "<form method='get' action='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/Behaviour/behaviour_manage.php'>" ;
-				print "<table class='noIntBorder' cellspacing='0' style='width: 100%'>" ;
-					?>
-					<tr>
-						<td> 
-							<b><?php print __($guid, 'Student') ?></b><br/>
-							<span class="emphasis small"></span>
-						</td>
-						<td class="right">
-							<select name="gibbonPersonID" id="gibbonPersonID" class="standardWidth">
-								<option value=""></option>
-								<?php
-								try {
-									$dataSelect=array("gibbonSchoolYearID"=>$_SESSION[$guid]["gibbonSchoolYearID"]); 
-									$sqlSelect="SELECT * FROM gibbonPerson JOIN gibbonStudentEnrolment ON (gibbonPerson.gibbonPersonID=gibbonStudentEnrolment.gibbonPersonID) JOIN gibbonRollGroup ON (gibbonStudentEnrolment.gibbonRollGroupID=gibbonRollGroup.gibbonRollGroupID) WHERE gibbonRollGroup.gibbonSchoolYearID=:gibbonSchoolYearID AND status='Full' AND (dateStart IS NULL OR dateStart<='" . date("Y-m-d") . "') AND (dateEnd IS NULL  OR dateEnd>='" . date("Y-m-d") . "') ORDER BY surname, preferredName" ;
-									$resultSelect=$connection2->prepare($sqlSelect);
-									$resultSelect->execute($dataSelect);
-								}
-								catch(PDOException $e) { }
-								while ($rowSelect=$resultSelect->fetch()) {
-									if ($gibbonPersonID==$rowSelect["gibbonPersonID"]) {
-										print "<option selected value='" . $rowSelect["gibbonPersonID"] . "'>" . formatName("", htmlPrep($rowSelect["preferredName"]), htmlPrep($rowSelect["surname"]), "Student", true) . " (" . htmlPrep($rowSelect["nameShort"]) . ")</option>" ;
-									}
-									else {
-										print "<option value='" . $rowSelect["gibbonPersonID"] . "'>" . formatName("", htmlPrep($rowSelect["preferredName"]), htmlPrep($rowSelect["surname"]), "Student", true) . " (" . htmlPrep($rowSelect["nameShort"]) . ")</option>" ;
-									}
-								}
-								?>			
-							</select>
-						</td>
-					</tr>
-					
-					<?php
-					print "<tr>" ;
-						print "<td class='right' colspan=2>" ;
-							print "<input type='hidden' name='q' value='" . $_GET["q"] . "'>" ;
-							print "<a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/Formal Assessment/internalAssessment_view.php'>" . __($guid, 'Clear Filters') . "</a> " ;
-							print "<input type='submit' value='" . __($guid, 'Go') . "'>" ;
-						print "</td>" ;
-					print "</tr>" ;
-				print "</table>" ;
-			print "</form>" ;
-			
-			if ($gibbonPersonID) {
-				print "<h3>" ;
-					print __($guid, "Internal Assessments") ;
-				print "</h3>" ;
-				
-				//Check for access
-				try {
-					$dataCheck=array("gibbonPersonID"=>$gibbonPersonID); 
-					$sqlCheck="SELECT DISTINCT gibbonPerson.* FROM gibbonPerson LEFT JOIN gibbonStudentEnrolment ON (gibbonPerson.gibbonPersonID=gibbonStudentEnrolment.gibbonPersonID) WHERE gibbonPerson.gibbonPersonID=:gibbonPersonID AND status='Full' AND (dateStart IS NULL OR dateStart<='" . date("Y-m-d") . "') AND (dateEnd IS NULL  OR dateEnd>='" . date("Y-m-d") . "')" ;
-					$resultCheck=$connection2->prepare($sqlCheck);
-					$resultCheck->execute($dataCheck);
-				}
-				catch(PDOException $e) { 
-					print "<div class='error'>" . $e->getMessage() . "</div>" ; 
-				}
-				
-				if ($resultCheck->rowCount()!=1) {
-					print "<div class='error'>" ;
-						print __($guid, "The selected record does not exist, or you do not have access to it.") ;
-					print "</div>" ;
-				}
-				else {
-					print getInternalAssessmentRecord($guid, $connection2, $gibbonPersonID) ;
-				}
-			}			
-		}
-		else if ($highestAction=="View Internal Assessments_myChildrens") { //MY CHILDREN
-			print "<div class='trail'>" ;
-			print "<div class='trailHead'><a href='" . $_SESSION[$guid]["absoluteURL"] . "'>" . __($guid, "Home") . "</a> > <a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/" . getModuleName($_GET["q"]) . "/" . getModuleEntry($_GET["q"], $connection2, $guid) . "'>" . __($guid, getModuleName($_GET["q"])) . "</a> > </div><div class='trailEnd'>" .__($guid, 'View My Childrens\'s Internal Assessments') . "</div>" ;
+			print "<div class='trailHead'><a href='" . $_SESSION[$guid]["absoluteURL"] . "'>" . __($guid, "Home") . "</a> > <a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/" . getModuleName($_GET["q"]) . "/" . getModuleEntry($_GET["q"], $connection2, $guid) . "'>" . __($guid, getModuleName($_GET["q"])) . "</a> > </div><div class='trailEnd'>" .__($guid, 'View My Childrens\'s External Assessments') . "</div>" ;
 			print "</div>" ;
 			
 			//Test data access field for permission
@@ -197,10 +115,10 @@ else {
 							</tr>
 							<tr>
 								<td colspan=2 class="right">
-									<input type="hidden" name="q" value="/modules/Formal Assessment/internalAssessment_view.php">
+									<input type="hidden" name="q" value="/modules/Formal Assessment/externalAssessment_view.php">
 									<input type="hidden" name="address" value="<?php print $_SESSION[$guid]["address"] ?>">
 									<?php
-									print "<a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/Formal Assessment/internalAssessment_view.php'>" . __($guid, 'Clear Search') . "</a>" ;
+									print "<a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/Formal Assessment/externalAssessment_view.php'>" . __($guid, 'Clear Search') . "</a>" ;
 									?>
 									<input type="submit" value="<?php print __($guid, "Submit") ; ?>">
 								</td>
@@ -235,22 +153,22 @@ else {
 					}
 					else {
 						$rowChild=$resultChild->fetch() ;
-						print getInternalAssessmentRecord($guid, $connection2, $gibbonPersonID, "parent") ;
+						externalAssessmentDetails($guid, $gibbonPersonID, $connection2, NULL, FALSE ) ;
 					}
 				}
 			}
 			
 		}
-		else { //MY Internal Assessments
+		else { //My External Assessments
 			print "<div class='trail'>" ;
-			print "<div class='trailHead'><a href='" . $_SESSION[$guid]["absoluteURL"] . "'>" . __($guid, "Home") . "</a> > <a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/" . getModuleName($_GET["q"]) . "/" . getModuleEntry($_GET["q"], $connection2, $guid) . "'>" . __($guid, getModuleName($_GET["q"])) . "</a> > </div><div class='trailEnd'>" .__($guid, 'View My Internal Assessments') . "</div>" ;
+			print "<div class='trailHead'><a href='" . $_SESSION[$guid]["absoluteURL"] . "'>" . __($guid, "Home") . "</a> > <a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/" . getModuleName($_GET["q"]) . "/" . getModuleEntry($_GET["q"], $connection2, $guid) . "'>" . __($guid, getModuleName($_GET["q"])) . "</a> > </div><div class='trailEnd'>" .__($guid, 'View My External Assessments') . "</div>" ;
 			print "</div>" ;
 			
 			print "<h3>" ;
-				print __($guid, "Internal Assessments") ;
+				print __($guid, "External Assessments") ;
 			print "</h3>" ;
 			
-			print getInternalAssessmentRecord($guid, $connection2, $_SESSION[$guid]["gibbonPersonID"], "student") ;
+			print externalAssessmentDetails($guid, $_SESSION[$guid]["gibbonPersonID"], $connection2, NULL, FALSE ) ; 
 		}
 	}
 }		
