@@ -71,8 +71,10 @@ v12.0.00
 		Departments: fixed filter in Homework link from Class view page
 		Finance: fixed <? bug
 		Finance: added ability to provide multiple company email addresses
+		Form Groups: adjusted labels in Sort By select
 		Formal Assessment: fixed issue with View Classes menu not appearing for a user with no classes (e.g. admin)
 		Formal Assessment: fixed uploaded response file selector gigantism issue
+		Formal Assessment: added interface for parents and students to view External Assessments (off by default)
 		Library: added item count column to lending log
 		Library: added count of records to Manage Catalog
 		Library: removed required status from ISBN10 field in Print Publication
